feat: prepare v4.0.0 snapshot base runtime